--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,4 @@
-<header class="ms-welcome__header ms-bgColor-neutralLighter ms-u-fadeIn500">
-    <img width="90" height="90" src="../../assets/logo-filled.png" alt="my-office-add-in" title="my-office-add-in" />
-    <h1 class="ms-fontSize-su ms-fontWeight-light ms-fontColor-neutralPrimary">hello User</h1>
-</header>
+<h1 class="logo">CLM</h1>
 <main class="ms-welcome__main">
-    <h2 class="ms-font-xl ms-fontWeight-semilight ms-fontColor-neutralPrimary ms-u-slideUpIn20">Hello  Discover what my-office-add-in can do for you today! </h2>
-    <ul class="ms-List ms-welcome__features ms-u-slideUpIn10">
-        <li class="ms-ListItem">
-            <i class="ms-Icon ms-Icon--Ribbon"></i>
-            <span class="ms-font-m ms-fontColor-neutralPrimary">Achieve more with Office integration</span>
-        </li>
-        <li class="ms-ListItem">
-            <i class="ms-Icon ms-Icon--Unlock"></i>
-            <span class="ms-font-m ms-fontColor-neutralPrimary">Unlock features and functionality</span>
-        </li>
-        <li class="ms-ListItem">
-            <i class="ms-Icon ms-Icon--Design"></i>
-            <span class="ms-font-m ms-fontColor-neutralPrimary">Create and visualize like a pro</span>
-        </li>
-    </ul>
-    <br />
-    <br />
-    <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
-    <div role="button" class="ms-welcome__action ms-Button ms-Button--hero ms-u-slideUpIn20" (click)="run()">
-        <span class="ms-Button-label">Run</span>
-        <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--ChevronRight"></i></span>
-    </div>
+    <router-outlet></router-outlet>
 </main>
