--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1 class="logo">CLM</h1>
 <main class="ms-welcome__main">
-    <router-outlet></router-outlet>
+    <router-outlet style="width: 100%"></router-outlet>
 </main>
