--- a/src/app/component/Login/login.html
+++ b/src/app/component/Login/login.html
@@ -1,5 +1,13 @@
-<section>
-    <input type="text" [(ngModel)]="user.email" placeholder="Email"/>
-    <input type="password" [(ngModel)]="user.password" placeholder="Password"/>
-    <button (click)="callAPI()">Login</button>
-</section>
+<mat-card>
+    <h1 class="primaryColorRed" style="margin-bottom: 30px">Welcome to <span>CLM</span></h1>
+    <mat-card-content>
+    <mat-form-field class="full-width " >
+        <input matInput [(ngModel)]="user.email" placeholder="Email">
+    </mat-form-field>
+    <mat-form-field class="full-width margin20" >
+        <input matInput type="password" [(ngModel)]="user.password" placeholder="Password">
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" (click)="callAPI()">Login</button>
+    </mat-card-content>
+</mat-card>
