--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -153,6 +153,9 @@ md2-datepicker:focus:not(.md2-calander-disabled) .md2-calander-input,
 .colorAnalytic5 {
   color: #B3689E;
 }
+.colorWhite{
+  color: white !important;
+}
 
 
 
