--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@
 
 // ******* basic color variables ******* //
 // --primary--
-$nad-color-primary-dark: #ff6363;
+$nad-color-primary-dark: #fff;
 $nad-color-primary-light: #fbd4cb;
 // --accent--
 $nad-color-accent-dark: #54ad45;
