--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -309,6 +309,9 @@ md2-datepicker:focus:not(.md2-calander-disabled) .md2-calander-input,
 .colorPrimary {
   color: $nad-color-primary-dark;
 }
+.colorAccent {
+  color: $nad-color-accent-dark;
+}
 
 .colorLightRed {
   color: #ff6363;
