--- a/src/app/component/Tasks/task.html
+++ b/src/app/component/Tasks/task.html
@@ -1,4 +1,4 @@
-<div style="width: 100%;margin-bottom: 60px">
+<div style="width: 100vw;margin-bottom: 60px">
     <header class="myHeader">
         <h2 class="colorAccent pointer" (click)="goBack()"><i class="material-icons">keyboard_backspace</i> <span>{{(requestData.customer_data)?requestData.customer_data.name: requestData.vendor_data.name}}</span></h2>
     </header>
