--- a/src/app/component/Tasks/task.html
+++ b/src/app/component/Tasks/task.html
@@ -19,14 +19,13 @@
             </section>
         </div>
     </section>
-    <section *ngIf="taskData.task.length">
+    <section>
         <mat-tab-group style="width: 100vw" color="accent">
             <mat-tab label="Tasks">
-
-                <div>
+                <div *ngIf="taskData.task.length">
                     <div>
                         <ng-container *ngFor="let task of taskData.task" >
-                            <div class="myRequestData pointer" (click)="HighlightContentControlById(task.content_control)">
+                            <div class="myRequestData pointer" (click)="upsertTask(0, task)">
                                 <div style="display: flex; justify-content: space-between;align-items: center">
                                     <p class="colorLightGrey textEllipsis" style="width: 50%">{{task.id}}</p>
                                     <div style="width: 40%;display: flex;justify-content: flex-end">
@@ -40,8 +39,8 @@
                                 </div>
 
                                 <section class="taskComment marginTop20" *ngIf="task.comment">
+                                    <p class="boldFont">{{(task.comment.length > 1)?'Comments':'Comment'}}</p>
                                     <ng-container *ngFor="let comment of task.comment">
-                                        <p class="boldFont">{{(comment.length > 1)?'Comments':'Comment'}}</p>
                                         <div class="commentUserInfo">
                                             <div style="display: flex;align-items: center">
                                                 <div class="userInitIcon">{{getInitial(comment.name)}}</div>
@@ -60,6 +59,7 @@
                         </ng-container>
                     </div>
                 </div>
+                <h1 class="padding10 center colorLightGrey" *ngIf="!taskData.task.length">No task available</h1>
             </mat-tab>
             <mat-tab label="Summary">
                 <div class="requestSummary">
@@ -115,10 +115,9 @@
             </mat-tab>
         </mat-tab-group>
     </section>
-    <h1 class="list" *ngIf="!taskData.task.length">No task available</h1>
 </div>
 <section class="padding10 fixedSectionBottom">
     <button (click)="uploadDocuments()" mat-button color="accent">Upload Document</button>
-    <button (click)="addTask()" mat-raised-button color="accent">Add task</button>
+    <button (click)="upsertTask(1)" mat-raised-button color="accent">Add task</button>
     <p class="marginTop20 logoutText" [routerLink]="'/login'">Logout</p>
 </section>
