--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,8 +5,8 @@
 $nad-color-primary-dark: #fff;
 $nad-color-primary-light: #fbd4cb;
 // --accent--
-$nad-color-accent-dark: #2F4F91;
-$nad-color-accent-light: #2F4F91;
+$nad-color-accent-dark: #000000;
+$nad-color-accent-light: #000000;
 
 // --other colors--
 $nad-color-yellow-light: #f8951d;
